--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -5,37 +5,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Registration">
+    tools:context=".passenger.signup.Registration">
 
-   v<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    v
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:padding="15dp"
-        android:text="Registration"
-        android:fontFamily="@font/source_sans_pro"
-        android:gravity="center"
-        android:textAllCaps="true"
-        android:textColor="#000000"
-        android:textSize="20sp" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <View
-        android:layout_width="50dp"
-        android:layout_height="2dp"
-        android:background="#D01A1E"
-        android:layout_gravity="center"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:fontFamily="@font/source_sans_pro"
+            android:gravity="center"
+            android:padding="15dp"
+            android:text="Registration"
+            android:textAllCaps="true"
+            android:textColor="#000000"
+            android:textSize="20sp" />
 
-</LinearLayout>
+        <View
+            android:layout_width="50dp"
+            android:layout_height="2dp"
+            android:layout_gravity="center"
+            android:background="#D01A1E" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,89 +49,76 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-            <EditText
-                android:id="@+id/etxt_full_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:layout_marginTop="10dp"
-                android:padding="10dp"
-                android:hint="Full Name"
-                android:textSize="18sp"
-                android:fontFamily="@font/source_sans_pro"
-                android:background="#ffffff"
-                android:inputType="textPersonName" />
-            </android.support.design.widget.TextInputLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/etxt_email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:ems="10"
-                android:padding="10dp"
-                android:hint="E-mail"
-                android:fontFamily="@font/source_sans_pro"
-                android:background="#ffffff"
-                android:inputType="textEmailAddress" />
-            </android.support.design.widget.TextInputLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/etxt_mobile"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:ems="10"
-                android:padding="10dp"
-                android:hint="Mobile Number"
-                android:fontFamily="@font/source_sans_pro"
-                android:background="#ffffff"
-                android:inputType="phone"
-                android:enabled="false"
-                android:focusable="false"/>
-
-            </android.support.design.widget.TextInputLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-
-                <TextView
+                <EditText
+                    android:id="@+id/etxt_full_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:id="@+id/etxt_dob"
                     android:background="#ffffff"
-                    android:hint="Date of birth"
-                    android:padding="10dp"
+                    android:ems="10"
                     android:fontFamily="@font/source_sans_pro"
-                    android:textSize="20dp"/>
+                    android:hint="Full Name"
+                    android:inputType="textPersonName"
+                    android:padding="10dp"
+                    android:textSize="18sp" />
+            </android.support.design.widget.TextInputLayout>
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/etxt_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:background="#ffffff"
+                    android:ems="10"
+                    android:fontFamily="@font/source_sans_pro"
+                    android:hint="E-mail"
+                    android:inputType="textEmailAddress"
+                    android:padding="10dp" />
+            </android.support.design.widget.TextInputLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/etxt_mobile"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:background="#ffffff"
+                    android:ems="10"
+                    android:enabled="false"
+                    android:focusable="false"
+                    android:fontFamily="@font/source_sans_pro"
+                    android:hint="Mobile Number"
+                    android:inputType="phone"
+                    android:padding="10dp" />
+
+            </android.support.design.widget.TextInputLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
 
         </LinearLayout>
@@ -143,17 +132,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-            <EditText
-                android:id="@+id/etxt_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:ems="10"
-                android:padding="10dp"
-                android:hint="Password"
-                android:fontFamily="@font/source_sans_pro"
-                android:background="#ffffff"
-                android:inputType="numberPassword" />
+                <EditText
+                    android:id="@+id/etxt_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:background="#ffffff"
+                    android:ems="10"
+                    android:fontFamily="@font/source_sans_pro"
+                    android:hint="Password"
+                    android:inputType="numberPassword"
+                    android:padding="10dp" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -175,8 +164,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10sp"
-                    android:text="  Service type"
                     android:fontFamily="@font/source_sans_pro"
+                    android:text="  Service type"
                     android:textColor="#8e8e8e"
                     android:textSize="20sp" />
 
@@ -187,27 +176,26 @@
                     android:visibility="gone">
 
 
-
                     <RadioButton
                         android:id="@+id/radio_passenger"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10sp"
-                        android:text="Passenger"
                         android:fontFamily="@font/source_sans_pro"
-                        android:textSize="19sp"
-                        android:textColor="#8e8e8e"/>
+                        android:text="Passenger"
+                        android:textColor="#8e8e8e"
+                        android:textSize="19sp" />
 
                     <RadioButton
                         android:id="@+id/radio_driver"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Driver"
-                        android:fontFamily="@font/source_sans_pro"
                         android:layout_marginLeft="20sp"
                         android:layout_marginTop="10sp"
-                        android:textSize="19sp"
-                        android:textColor="#8e8e8e"/>
+                        android:fontFamily="@font/source_sans_pro"
+                        android:text="Driver"
+                        android:textColor="#8e8e8e"
+                        android:textSize="19sp" />
 
 
                 </LinearLayout>
@@ -224,10 +212,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="By registering you agree to the Terms and Conditions and Privacy Policy"
+                android:layout_marginTop="10dp"
                 android:fontFamily="@font/source_sans_pro"
-                android:textSize="15sp"
-                android:layout_marginTop="10dp"/>
+                android:text="By registering you agree to the Terms and Conditions and Privacy Policy"
+                android:textSize="15sp" />
 
         </LinearLayout>
 
@@ -241,11 +229,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="15dp"
-                android:text="Register"
-                android:textSize="15sp"
+                android:background="@drawable/button_round_red"
                 android:fontFamily="@font/source_sans_pro"
+                android:text="Register"
                 android:textColor="#ffffff"
-                android:background="@drawable/button_round_red"/>
+                android:textSize="15sp" />
 
         </LinearLayout>
 
