--- a/app/src/main/res/layout-small/activity_splash__screen.xml
+++ b/app/src/main/res/layout-small/activity_splash__screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Splash_Screen">
+    tools:context=".EntryPoint.Splash_Screen">
 
 
     <LinearLayout
