--- a/app/src/main/res/layout/activity_splash__screen.xml
+++ b/app/src/main/res/layout/activity_splash__screen.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="bottom"
-    tools:context=".Splash_Screen">
+    tools:context=".EntryPoint.Splash_Screen">
 
 
     <LinearLayout
